--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,42 +9,50 @@
   <body class="page">
     <header class="page__header main-header">
       <div class="main-header__wrapper">
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--opened">
           <a class="main-nav__logo logo" href="index.html">
-            <img class="main-hav__logo-image logo__image" src="" alt="Логотип магазина Мишка.">
+            <img class="main-nav__logo-image logo__image" src="img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
           </a>
-            <button class="main-nav__toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
-            <ul class="main-nav__list main-nav__list--site">
-              <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--catalog">Каталог товаров</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--form" href="form.html">Вязание на заказ</a>
-              </li>
-            </ul>
-            <ul class="main-nav__list main-nav__list--user">
-              <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--search" href="#">
-                  <span>Поиск по сайту</span>
-                </a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--cart" href="#">Корзина: пока пуста</a>
-              </li>
-            </ul>
-            <ul class="main-nav__list main-nav__list--promo">
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="#">Новые поступления</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="#">Распродажа</a>
-              </li>
-            </ul>
-            <span class="main-nav__text">
-                Бесплатная доставка по России
-            </span>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list main-nav__list--site">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--catalog">Каталог товаров</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--form" href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="main-nav__list main-nav__list--user">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--search" href="#">
+                <svg class="main-nav__link-icon" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m17.693 16.057-3.477-3.477c1.023-1.33 1.534-2.966 1.534-4.705C15.75 3.477 12.273 0 7.875 0S0 3.477 0 7.875s3.477 7.875 7.875 7.875c1.739 0 3.375-.614 4.704-1.534l3.478 3.477c.204.205.409.307.818.307.614 0 1.125-.511 1.125-1.125 0-.204-.102-.511-.307-.818ZM2.25 7.875c0-3.068 2.557-5.625 5.625-5.625S13.5 4.807 13.5 7.875 10.943 13.5 7.875 13.5 2.25 10.943 2.25 7.875Z"/>
+                </svg>
+                <span>Поиск по сайту</span>
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--cart" href="#">
+                <svg class="main-nav__link-icon" width="21" height="18" viewBox="0 0 21 18" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.188 6.857h-3.55L13.188.381C12.985 0 12.58-.095 12.174.095s-.507.572-.304.953l3.145 5.81H5.783l3.145-5.81c.202-.381 0-.762-.305-.953-.406-.19-.811 0-1.014.286l-3.45 6.476H.812c-.406 0-.812.286-.812.762 0 .381.304.762.812.762h.202l.914 2.857c-.203.095-.305.286-.305.572 0 .38.305.666.71.666L4.058 18h12.884l1.725-5.524c.405 0 .71-.286.71-.667 0-.19-.102-.476-.304-.57l.912-2.858h.203c.406 0 .812-.286.812-.762 0-.476-.406-.762-.812-.762Zm-4.565 9.62H5.073L3.854 12.38h13.087l-1.319 4.095Zm1.623-5.525H3.348l-.812-2.666h15.522l-.812 2.666Z">
+                </svg>
+                Корзина: пока пуста
+              </a>
+            </li>
+          </ul>
+          <ul class="main-nav__list main-nav__list--promo">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">Распродажа</a>
+            </li>
+          </ul>
+          <span class="main-nav__text">
+            Бесплатная доставка по России
+          </span>
         </nav>
       </div>
     </header>
@@ -65,6 +73,9 @@
               <div class="product-card__bottom">
                 <span class="product-card__price">1 200 руб.</span>
                 <a class="product-card__cart-link" href="#">
+                  <svg width="20" height="19" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"/>
+                  </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
               </div>
@@ -80,6 +91,9 @@
               <div class="product-card__bottom">
                 <span class="product-card__price">690 руб.</span>
                 <a class="product-card__cart-link" href="#">
+                  <svg width="20" height="19" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"/>
+                  </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
               </div>
@@ -95,6 +109,9 @@
               <div class="product-card__bottom">
                 <span class="product-card__price">1 500 руб.</span>
                 <a class="product-card__cart-link" href="#">
+                  <svg width="20" height="19" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"/>
+                  </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
               </div>
@@ -105,7 +122,15 @@
       <section class="production">
         <div class="production__wrapper">
           <h2 class="production__title">Процесс производства</h2>
-          <video class="production__video" controls="controls"></video>
+          <div class="production__video-wrapper">
+            <video class="production__video" controls="controls"></video>
+            <a class="production__video-play" href="#">
+              <span class="visually-hidden">Воспроизвести видео</span>
+              <svg width="101" height="77" viewBox="0 0 101 77" xmlns="http://www.w3.org/2000/svg">
+                <path d="M97.27 18.1s-.9-7-3.803-10.1c-3.603-4-7.707-4.1-9.509-4.3-13.313-1-33.332-1-33.332-1h-.1s-20.019 0-33.331 1c-1.902.2-5.906.3-9.51 4.3-2.802 3.1-3.803 10.1-3.803 10.1s-.901 8.2-.901 16.4v7.7c0 8.2.9 16.4.9 16.4s.902 7 3.804 10.1c3.604 4 8.408 3.9 10.51 4.3 7.608.8 32.431 1 32.431 1s20.02 0 33.332-1c1.902-.2 5.906-.3 9.51-4.3 2.802-3.1 3.803-10.1 3.803-10.1s.9-8.2.9-16.4v-7.7c0-8.2-.9-16.4-.9-16.4Z" fill="#63D1BB"/><path d="M50.526 76.8c-1 0-25.024-.3-32.63-1h-.201c-.3-.1-.7-.1-1.101-.2-2.503-.3-7.207-.9-10.81-5C2.38 67 1.379 59.8 1.279 59c0-.3-1-8.5-1-16.7v-7.7c0-8.3.9-16.4.9-16.7v-.1c.1-.8 1.201-7.9 4.504-11.6 4.004-4.4 8.509-4.9 10.71-5.1.2 0 .401 0 .501-.1h.1c13.313-1 33.332-1 33.532-1h.1c.2 0 20.22 0 33.532 1h.1c.2 0 .3 0 .5.1 2.203.2 6.707.7 10.711 5.1 3.403 3.6 4.404 10.8 4.504 11.6 0 .3 1.001 8.5 1.001 16.8v7.7c0 8.3-.901 16.4-1 16.7v.1c-.1.8-1.202 8-4.505 11.6-4.004 4.4-8.508 4.9-10.71 5.1-.2 0-.4 0-.5.1h-.1c-13.313.9-33.433.9-33.633.9Zm-31.93-6.4c7.507.7 31.23 1 32.03 1 .701 0 20.12 0 33.032-1 .2 0 .4 0 .6-.1 1.802-.2 4.605-.5 7.207-3.3 1.802-2 2.903-6.9 3.103-8.6.1-.5.901-8.4.901-16.1v-7.7c0-7.8-.9-15.6-1.001-16.1-.3-2.4-1.401-6.8-3.103-8.5-2.602-2.9-5.405-3.1-7.207-3.3-.2 0-.4 0-.6-.1-13.113-1-32.832-1-33.032-1h-.1c-.2 0-20.019 0-33.031 1-.2 0-.4 0-.6.1-1.803.2-4.605.5-7.208 3.3-1.802 2-2.903 6.9-3.103 8.6-.1.6-.9 8.4-.9 16.1v7.7c0 7.7.9 15.6.9 16.1.3 2.4 1.402 6.8 3.103 8.5 2.302 2.6 5.305 3 7.507 3.3.6-.1 1.001 0 1.502.1Z"/><path d="M38.615 20.5v35.7l29.828-17.8-29.828-17.9Z"/>
+              </svg>
+            </a>
+          </div>
           <p class="production__text">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео
 о том, как появляются наши товары.
@@ -118,29 +143,37 @@
     <footer class="page__footer main-footer">
       <div class="main-footer__wrapper">
         <a class="main-footer__logo">
-
+          <svg width="102" height="34" viewBox="0 0 102 34" xmlns="http://www.w3.org/2000/svg"><path d="M19.22 21.381c-.1-2.685-.5-5.27-.5-7.956 0-2.187.4-4.375-.4-6.464 0-.199.1-.497.1-.696.2-.994-3.3-.497-3.8.497-.3.299-.5.597-.4.995 0 .1.1.199.1.298-.7 3.183-1.6 6.265-2.6 9.348-.4 1.194-.9 2.288-1.3 3.481-.6-1.094-1.2-2.188-1.6-3.381-1.4-3.381-2.6-6.862-4.3-10.144.2-1.492-3.2-1.392-3.9 0-.8 1.69-.7 3.381-.4 5.171.3 1.99.4 3.978.4 6.067 0 3.978.4 7.856.4 11.834-.4.398-.5.895-.1 1.392.2.2.4.398.6.498 1 .696 3.6.099 3.6-1.293 0-4.078-.3-8.155-.4-12.332v-1.193c.1.1.1.298.2.398.6 1.59 1.3 3.182 2.2 4.674.9 1.491 1.3 3.082 1.8 4.674-.2.199-.3.497-.2.696 0 .199.1.298.3.398.6.497 1.8.298 2.5 0 .3-.1.6-.299.8-.398.3-.2.9-.696.7-1.194 0-.099-.1-.198-.1-.298.5-1.293.7-2.585 1-3.878.3-1.393.8-2.785 1.3-4.078.1.597.1 1.194.2 1.89.2 2.585 0 5.072 0 7.558 0 .795.1 1.591.2 2.486.1.298.4 1.79.3 1.89-.8.497-.6 1.093.2 1.292.9.2 2.1-.1 2.8-.696 1.2-1.094.6-2.784.4-4.177-.5-2.386 0-4.972-.1-7.359ZM27.62 22.078c-.1-1.99-.8-3.879-.8-5.868 0-2.287.2-4.574-.2-6.862-.1-.696-4.1.1-3.9.995.3 2.088.2 4.177.2 6.364 0 1.99.5 3.879.7 5.868.3 2.088-.1 4.177.1 6.166.1.994.8 2.685.1 3.58-.4.497 1.5.298 1.6.298.8-.1 1.8-.398 2.3-.994.7-.796.2-2.387.1-3.382-.3-1.989-.1-4.176-.2-6.165ZM43.92 18.796c-2.1-2.785-5.9-.796-8.6-1.492-1.4-.398-1.4-2.287-1.4-3.381 0-1.393-.1-2.685-.3-4.078-.1-1.094 0-2.088.7-2.884.1-.1.9-.298.8-.298.4-.1.7-.1 1.1-.1 1.5-.099 4.6.2 4 2.487-.3.994 3.6.398 3.9-.597 1.2-4.575-7.3-3.68-9.7-3.083-2.2.597-4.6 1.79-4.8 4.376-.1 1.193.3 2.387.3 3.58.1 1.392-.2 2.785.3 4.077 1.1 2.984 5.5 1.591 7.8 1.691 3.8.298 2.7 5.47 2.7 7.856 0 1.293 1.2 3.382.2 4.476-.6.696-2 .696-2.8.795-.8.1-2.2.298-2.7-.497-1-1.392.1-3.78-.1-5.37-.1-.895-4.1-.1-3.9.994.3 2.586-1.4 6.066 2.4 6.564 2.4.298 5.2-.2 7.5-.895 1.2-.398 2.3-.895 3.2-1.79 1-.895.7-2.288.4-3.481-.5-3.083.9-6.464-1-8.95ZM61.32 18.597c-.1-3.78-.7-7.459-.7-11.238 0-1.989-4-1.293-4 .298 0 3.58.5 7.16.7 10.74v.2c-1.9 0-3.9.198-5.9.198.2-4.574-.6-9.149-.4-13.823 0-.596-3.9-.1-3.9.995-.2 4.475.6 8.85.5 13.326-.1 2.088-.2 4.276-.3 6.364 0 1.094.2 2.188.3 3.282.1.995.5 2.288.2 3.282-.2.796 3.6.298 3.9-.696.5-1.79-.2-3.978-.4-5.768-.2-1.69 0-3.48.1-5.171 2-.1 4.1-.299 6.1 0 .1 1.392.2 2.784.3 4.077.1 1.193.2 2.287.2 3.48 0 .995.1 2.487-.2 3.481-.8 2.089 3.1 1.89 3.7.398.7-1.89.5-4.177.4-6.166-.2-2.486-.6-4.873-.6-7.26ZM78.22 22.973c-.9-2.785-2.4-5.171-3.6-7.757 1-1.89 2-3.878 2.9-5.867.8-1.79 1.4-3.78 3.1-5.072.6-.398.6-.895-.3-.995-.9-.1-2.1.2-2.8.696-1.4 1.293-2.4 2.685-3.1 4.376-.9 2.089-1.9 4.077-2.9 6.066-.1.1-.1.299-.2.398-.5.299-.8.796-.6 1.293-.8 1.591-1.6 3.083-2.5 4.575-.3-5.47-1-11.04-1.2-16.509 0-1.293-4-.497-3.9.995.2 6.862 1.2 13.624 1.3 20.486v.1c-.3.298-.2.497.1.596 0 1.79-.1 3.48-.2 5.27-.5.697.5 1.095 1.1 1.095h.1c.7 0 2.6-.299 2.7-1.393.2-2.088.3-4.176.2-6.265 1.6-1.69 2.9-3.58 4.1-5.569.8 1.492 1.5 2.984 2 4.575.9 2.685 2.3 5.27 3.1 7.956.5 1.79 4.5.696 3.9-.995-1-2.784-2.4-5.27-3.3-8.055ZM101.721 18.398c-.2-.795-1.4-.795-2.3-.795v-.995c-.1-2.685-.2-5.37-.4-7.956-.2-2.486-1.6-3.281-4-3.182-2.4.1-5.2.497-7.5 1.392-2.6.995-4.1 2.884-4.6 5.669-.5 2.983.2 6.166.4 9.149.2 3.48.1 6.961.1 10.442 0 .597 3.9 0 3.9-.994v-8.255c0-.795-.1-1.59-.1-2.386 1.4-.597 3.7 0 5.1.1 1.1.099 2.2-.2 3.2-.3 0 2.288.1 4.575.2 6.863 0 1.193.5 3.48-.4 4.475-.4.497 1.5.298 1.6.298.8-.1 1.8-.398 2.3-.994.9-1.094.5-3.78.4-5.072-.1-1.89-.1-3.78-.1-5.669 1.1-.199 2.4-.895 2.2-1.79Zm-14.6-.1c-.1-1.192-.2-2.485-.3-3.679-.2-2.287.1-5.569 2.3-6.961.6-.398 1.7-.298 2.4-.398 1-.199 2-.398 2.8.199 1.2.796.9 3.68.9 4.873 0 1.989.2 3.978.3 5.967-.6.1-1.1.1-1.7.1-2.3-.2-4.6-.597-6.7-.1ZM24.22 6.663c.5-.1 1-.199 1.5-.497l.2-.2c.5-.297 1-.795.7-1.391-.5-1.094-.4-2.188-.4-3.382C26.22.2 25.22 0 24.42 0c-.7.1-2.2.597-2.2 1.492 0 .994-.1 1.989.1 2.983 0 .1-.1.199-.1.398-.1.199 0 .398.1.597v.397c.1.2.2.398.4.498.6.298 1.1.298 1.5.298Z"/></svg>
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--vk" href="#">
+              <svg width="29" height="22" viewBox="0 0 29 22" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path d="M1.741 5.339c0-.855.515-1.316 1.546-1.383l3.97.025a.52.52 0 0 1 .532.377c.409 1.257.866 2.343 1.372 3.257.507.913 1.168 1.965 1.985 3.156.071.15.187.226.347.226.124 0 .222-.059.293-.176l.08-.277.026-4.35c0-.302-.075-.503-.226-.604-.151-.1-.43-.176-.84-.226-.32-.05-.479-.235-.479-.553 0-.067.009-.118.027-.151.373-1.09 1.438-1.635 3.197-1.635L15.063 3c.675 0 1.234.16 1.678.478.444.318.666.821.666 1.509v5.708c.125.084.24.126.347.126.266 0 .497-.15.692-.453 1.954-2.582 3.011-4.308 3.171-5.18 0-.017.018-.059.053-.126.125-.251.329-.47.613-.654.284-.184.533-.31.746-.377a.555.555 0 0 1 .24-.05h4.13l.266.025c.355 0 .63.16.826.478.071.1.12.21.147.327.026.117.044.234.053.352.009.117.013.184.013.2v.177c-.124.687-.44 1.42-.946 2.2-.506.78-1.15 1.622-1.931 2.528-.782.905-1.27 1.5-1.466 1.785-.16.201-.24.386-.24.553 0 .135.072.286.214.453l3.89 4.627c.213.269.32.562.32.88 0 .386-.16.705-.48.956-.32.252-.702.394-1.146.428l-.453.025h-4.05a.855.855 0 0 0-.106.012.862.862 0 0 1-.107.013c-.39 0-.755-.16-1.092-.478-.125-.134-.96-1.123-2.505-2.967a1.387 1.387 0 0 0-.373-.327c-.07.268-.164.654-.28 1.157-.115.503-.2.863-.252 1.081l-.08.427c-.178.587-.551.94-1.12 1.057l-.372.025h-2.612c-1.474 0-2.944-.637-4.409-1.911-1.465-1.275-2.784-2.922-3.956-4.942-1.173-2.02-2.265-4.372-3.278-7.054a1.916 1.916 0 0 1-.133-.73Zm16.013 6.513c-.373 0-.71-.096-1.013-.29-.302-.192-.453-.456-.453-.791V4.987c0-.336-.088-.575-.266-.717-.178-.143-.488-.214-.932-.214l-1.52.05c-.763 0-1.34.126-1.731.378.781.352 1.172.922 1.172 1.71v4.426a1.5 1.5 0 0 1-.533 1.044 1.59 1.59 0 0 1-1.065.414c-.533 0-.942-.243-1.226-.729-1.385-1.978-2.416-3.856-3.09-5.633l-.24-.654-3.544-.025c-.23 0-.36.013-.386.038-.027.025-.04.096-.04.213 0 .151.018.31.053.478l.56 1.409c1.492 3.638 3.112 6.505 4.862 8.6 1.75 2.096 3.468 3.144 5.155 3.144h2.665c.106 0 .186-.03.24-.088.053-.06.097-.172.133-.34l.053-.251.506-2.213c.142-.302.267-.503.373-.604a.976.976 0 0 1 .693-.277c.426 0 .862.243 1.306.73l2.264 2.716c.142.218.293.327.453.327H26.6c.533 0 .8-.126.8-.378a.466.466 0 0 0-.08-.251l-3.863-4.552c-.302-.352-.453-.73-.453-1.131 0-.403.142-.788.426-1.157.23-.336.68-.893 1.345-1.673A37.63 37.63 0 0 0 26.52 7.59c.498-.68.826-1.296.986-1.849l.08-.327a.37.37 0 0 1-.027-.163.574.574 0 0 0-.026-.189h-4.183c-.267.1-.48.252-.64.453l-.16.478c-.444 1.156-1.607 2.942-3.49 5.356a1.892 1.892 0 0 1-1.305.503Z"/></g><defs><clipPath id="a"><path transform="translate(.741)" d="M0 0h28v22H0z"/></clipPath></defs></svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--yt" href="#">
+              <svg width="29" height="22" viewBox="0 0 29 22" xmlns="http://www.w3.org/2000/svg"><path d="m18.592 10.793-5.236-3.491a.655.655 0 0 0-1.015.545v6.982a.654.654 0 0 0 1.015.546l5.236-3.491a.655.655 0 0 0 0-1.091Zm-4.942 2.814V9.07l3.404 2.27-3.404 2.268Zm12.48-8.563a2.4 2.4 0 0 0-1.45-1.637C20.96 1.978 14.991 2 14.74 2c-.25 0-6.218-.022-9.938 1.407a2.4 2.4 0 0 0-1.45 1.637c-.285 1.069-.612 3.032-.612 6.294 0 3.262.327 5.226.611 6.295a2.4 2.4 0 0 0 1.451 1.636c3.72 1.43 9.687 1.407 9.938 1.407h.077c.752 0 6.316-.043 9.861-1.407a2.4 2.4 0 0 0 1.451-1.636c.284-1.07.611-3.033.611-6.295s-.327-5.225-.61-6.294Zm-1.265 12.261a1.09 1.09 0 0 1-.655.742c-3.49 1.342-9.403 1.32-9.469 1.32-.065 0-5.978.022-9.469-1.32a1.09 1.09 0 0 1-.654-.742c-.262-1.003-.568-2.847-.568-5.967 0-3.12.306-4.963.568-5.967a1.09 1.09 0 0 1 .654-.742c3.491-1.342 9.404-1.32 9.47-1.32.065 0 5.977-.022 9.468 1.32a1.092 1.092 0 0 1 .655.742c.262 1.004.567 2.847.567 5.967 0 3.12-.305 4.964-.567 5.967Z"/></svg>
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--tg" href="#">
+              <svg width="29" height="22" viewBox="0 0 29 22" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M24.202 3.153c.178.15.265.382.226.611l-2.626 15.757a.657.657 0 0 1-1.011.439l-7.879-5.253a.657.657 0 0 1-.149-.956l2.611-3.263-4.36 2.906a.657.657 0 0 1-.658.041L5.104 10.81a.657.657 0 0 1 .073-1.205L23.56 3.038a.657.657 0 0 1 .642.115Zm-17.135 7.17 3.536 1.768 7.561-5.041a.656.656 0 0 1 .877.956l-4.805 6.006 6.438 4.292L22.95 4.65 7.067 10.323Z"/></svg>
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
         </ul>
-        <a class="main-footer__copyright" href="#">
-          Разработано
-        </a>
+        <div class="main-footer__copyright">
+          <span>Разработано</span>
+          <a class="main-footer__copyright-link" href="#">
+            <svg width="27" height="35" viewBox="0 0 27 35" xmlns="http://www.w3.org/2000/svg"><path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"/></svg>
+          </a>
+        </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
