--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Mагазин «Мишка»</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -36,7 +36,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--search user-list__link user-list__link--search" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="18" height="18">
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
+                  <use xlink:href="img/sprite.svg#header-search"></use>
                 </svg>
                 <span>Поиск по сайту</span>
               </a>
@@ -44,7 +44,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--cart user-list__link user-list__link--cart" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="21" height="18">
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
+                  <use xlink:href="img/sprite.svg#header-cart"></use>
                 </svg>
                 Корзина: пока пуста
               </a>
@@ -91,7 +91,7 @@
                 <span class="product-card__price">1 200 руб.</span>
                 <a class="product-card__cart-link" href="#">
                   <svg width="20" height="19">
-                    <use xlink:href="img/sprite.svg#icon-product-card-cart"></use>
+                    <use xlink:href="img/sprite.svg#product-card-cart"></use>
                   </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
@@ -101,6 +101,9 @@
           <li class="catalog__item product-card">
             <a class="product-card__link-image" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/photo-2-desktop.webp 1x, img/catalog/photo-2-desktop@2x.webp 2x" width="316" height="462">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet.webp 1x, img/catalog/photo-2-tablet@2x.webp 2x" width="334" height="334">
+                <source type="image/webp" srcset="img/catalog/photo-2-mobile.webp 1x, img/catalog/photo-2-mobile@2x.webp 2x" width="260" height="195">
                 <source media="(min-width: 1150px)" srcset="img/catalog/photo-2-desktop.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x" width="316" height="462">
                 <source media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x" width="334" height="334">
                 <img class="product-card__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Корзинка для белья.">
@@ -115,7 +118,7 @@
                 <span class="product-card__price">690 руб.</span>
                 <a class="product-card__cart-link" href="#">
                   <svg width="20" height="19">
-                    <use xlink:href="img/sprite.svg#icon-product-card-cart"></use>
+                    <use xlink:href="img/sprite.svg#product-card-cart"></use>
                   </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
@@ -125,6 +128,9 @@
           <li class="catalog__item product-card">
             <a class="product-card__link-image" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/photo-3-desktop.webp 1x, img/catalog/photo-3-desktop@2x.webp 2x" width="316" height="462">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet.webp 1x, img/catalog/photo-3-tablet@2x.webp 2x" width="334" height="334">
+                <source type="image/webp" srcset="img/catalog/photo-3-mobile.webp 1x, img/catalog/photo-3-mobile@2x.webp 2x" width="260" height="195">
                 <source media="(min-width: 1150px)" srcset="img/catalog/photo-3-desktop.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x" width="316" height="462">
                 <source media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x" width="334" height="334">
                 <img class="product-card__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Большая корзинка для игрушек.">
@@ -139,7 +145,7 @@
                 <span class="product-card__price">1 500 руб.</span>
                 <a class="product-card__cart-link" href="#">
                   <svg width="20" height="19">
-                    <use xlink:href="img/sprite.svg#icon-product-card-cart"></use>
+                    <use xlink:href="img/sprite.svg#product-card-cart"></use>
                   </svg>
                   <span class="visually-hidden">Добавить в корзину</span>
                 </a>
@@ -153,6 +159,9 @@
           <h2 class="production__title">Процесс производства</h2>
           <div class="production__video-wrapper">
             <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/video-desktop.webp 1x, img/catalog/video-desktop@2x.webp 2x" width="682.65" height="455">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/video-tablet.webp 1x, img/catalog/video-tablet@2x.webp 2x" width="668" height="455">
+              <source type="image/webp" srcset="img/catalog/video-mobile.webp 1x, img/catalog/video-mobile@2x.webp 2x" width="260" height="150">
               <source media="(min-width: 1150px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x" width="682.65" height="455">
               <source media="(min-width: 768px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-tablet@2x.jpg 2x" width="668" height="455">
               <img class="production__video" src="img/catalog/video-mobile.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" width="260" height="150" alt="Производство.">
@@ -160,7 +169,7 @@
             <a class="production__video-play" href="#">
               <span class="visually-hidden">Воспроизвести видео</span>
               <svg width="101" height="77">
-                <use xlink:href="img/sprite.svg#icon-production-play"></use>
+                <use xlink:href="img/sprite.svg#video-play"></use>
               </svg>
             </a>
           </div>
@@ -177,14 +186,14 @@
       <div class="main-footer__wrapper">
         <a class="main-footer__logo">
           <svg width="102" height="34">
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--vk" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-vk"></use>
+                <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
@@ -192,7 +201,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--yt" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
@@ -200,7 +209,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--tg" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
@@ -210,7 +219,7 @@
           <span>Разработано</span>
           <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="35">
-              <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              <use xlink:href="img/sprite.svg#htmlacademy"></use>
             </svg>
           </a>
         </div>
