--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Mагазин «Мишка»</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -36,7 +36,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--search user-list__link user-list__link--search" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="18" height="18">
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
+                  <use xlink:href="img/sprite.svg#header-search"></use>
                 </svg>
                 <span>Поиск по сайту</span>
               </a>
@@ -44,7 +44,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--cart user-list__link user-list__link--cart" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="21" height="18">
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
+                  <use xlink:href="img/sprite.svg#header-cart"></use>
                 </svg>
                 Корзина: пока пуста
               </a>
@@ -179,7 +179,7 @@
                 <label class="form__label form__label--phone">
                   <input class="form__input form__input--phone" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
                   <svg width="25" height="24">
-                    <use xlink:href="img/sprite.svg#icon-phone"></use>
+                    <use xlink:href="img/sprite.svg#input-phone"></use>
                   </svg>
                 </label>
               </div>
@@ -190,7 +190,7 @@
                 <label class="form__label form__label--email">
                   <input class="form__input form__input--email" type="email" name="email" placeholder="Ваш Email*" required>
                   <svg width="32" height="21">
-                    <use xlink:href="img/sprite.svg#icon-email"></use>
+                    <use xlink:href="img/sprite.svg#input-email"></use>
                   </svg>
                 </label>
               </div>
@@ -218,14 +218,14 @@
       <div class="main-footer__wrapper">
         <a class="main-footer__logo">
           <svg width="102" height="34">
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--vk" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-vk"></use>
+                <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
@@ -233,7 +233,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--yt" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
@@ -241,7 +241,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--tg" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
@@ -251,7 +251,7 @@
           <span>Разработано</span>
           <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="35">
-              <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              <use xlink:href="img/sprite.svg#htmlacademy"></use>
             </svg>
           </a>
         </div>
