--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Mагазин «Мишка»</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -36,7 +36,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--search user-list__link user-list__link--search" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="18" height="18">
-                  <use href="img/sprite.svg#icon-search"></use>
+                  <use href="img/sprite.svg#header-search"></use>
                 </svg>
                 <span>Поиск по сайту</span>
               </a>
@@ -44,7 +44,7 @@
             <li class="main-nav__item user-list__item">
               <a class="main-nav__link main-nav__link--cart user-list__link user-list__link--cart" href="#">
                 <svg class="main-nav__link-icon user-list__link-icon" width="21" height="18">
-                  <use href="img/sprite.svg#icon-cart"></use>
+                  <use href="img/sprite.svg#header-cart"></use>
                 </svg>
                 <span>Корзина: пока пуста</span>
               </a>
@@ -116,6 +116,9 @@
               </tr>
             </table>
             <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/special-desktop.webp 1x, img/special-desktop@2x.webp 2x" width="525px" height="636">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/special-tablet.webp 1x, img/special-tablet@2x.webp 2x" width="334" height="414">
+              <source type="image/webp" srcset="img/special-mobile.webp 1x, img/special-tablet@2x.webp 2x" width="260" height="315">
               <source media="(min-width: 1150px)" srcset="img/special-desktop.jpg 1x, img/special-desktop@2x.jpg 2x" width="525px" height="636">
               <source media="(min-width: 768px)" srcset="img/special-tablet.jpg 1x, img/special-tablet@2x.jpg 2x" width="334" height="414">
               <img class="special__image" src="img/special-mobile.jpg" srcset="img/special-mobile@2x.jpg 2x" width="260" height="315" alt="Вязаные корзинки.">
@@ -217,14 +220,14 @@
       <div class="main-footer__wrapper">
         <a class="main-footer__logo">
           <svg width="102" height="34">
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--vk" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-vk"></use>
+                <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
@@ -232,7 +235,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--yt" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
@@ -240,7 +243,7 @@
           <li class="social-list__item">
             <a class="social-list__link social-list__link--tg" href="#">
               <svg width="29" height="22">
-                <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
@@ -250,7 +253,7 @@
           <span>Разработано</span>
           <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="35">
-              <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              <use xlink:href="img/sprite.svg#htmlacademy"></use>
             </svg>
           </a>
         </div>
